add_executable              (io io.cpp)

install(TARGETS io
        DESTINATION ${CMAKE_INSTALL_PREFIX}/io/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(FILES IO_TEST
        DESTINATION ${CMAKE_INSTALL_PREFIX}/io/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
