add_executable              (alltoall alltoall.cpp)
target_link_libraries       (alltoall ${libraries})

install(TARGETS alltoall
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/alltoall/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(FILES ALLTOALL_TEST
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/alltoall/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
