add_executable              (merge merge.cpp)
target_link_libraries       (merge ${libraries})

install(TARGETS merge
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/merge/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(FILES MERGE_TEST
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/merge/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
