add_executable              (sort sort.cpp)
target_link_libraries       (sort ${libraries})

install(TARGETS sort
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/sort/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(FILES SORT_TEST
        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/sort/
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
